--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -33,7 +33,7 @@
     "build:prod": "yarn build && yarn build:npm && cp ./package.json ../../README.md ./LICENSE build/npm && cp -a src/vendor-js build/npm/dist",
     "postbuild:prod": "sed -i.bak 's|  \"private\": true,||g' build/npm/package.json && rm -f build/npm/package.json.bak",
     "typecheck": "tsc --noEmit",
-    "lint": "yarn lint:types",
+    "lint": "eslint . --ext .ts,.tsx --fix",
     "release": "./scripts/release.sh"
   },
   "private": true,
