--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,14 +24,14 @@ jobs:
         run: yarn install
 
       - name: Check ESLint
-        run: yarn lint:eslint
+        run: yarn lint
 
-  lint-check:
+  typecheck:
     name: Type Check
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./packages/wallet-sdk
+        working-directory: ./
 
     steps:
       - name: Checkout
@@ -47,10 +47,11 @@ jobs:
         run: yarn install
 
       - name: Runs compile asset script
+        working-directory: ./packages/wallet-sdk
         run: node ./compile-assets.js
 
       - name: Check Types
-        run: yarn lint:types
+        run: yarn typecheck
 
   tests:
     name: Tests
@@ -75,6 +76,9 @@ jobs:
 
       - name: Install NPM dependencies
         run: yarn install
+
+      - name: Runs compile asset script
+        run: node ./compile-assets.js
 
       - name: Run Unit Tests
         run: yarn test:unit
