--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./packages/wallet-sdk
+        working-directory: ./
 
     strategy:
       matrix:
@@ -78,7 +78,9 @@ jobs:
         run: yarn install --immutable
 
       - name: Runs compile asset script
+        working-directory: ./packages/wallet-sdk
         run: node ./compile-assets.js
 
       - name: Run Unit Tests
+        working-directory: ./packages/wallet-sdk
         run: yarn test:unit
