create top level tsconfig.base.json (#935)
* create top level base tsconfig

* clean up scripts & update license

* conver to yarn 3

* move check commad to root

* update eslint to match ts pattern

* fix ci

* update readme

* check why install fails

* lint and fix script

* udpate yarnrc.yml

* add immutable flag

* update directorys

* revert changes

--- a/packages/wallet-sdk/tsconfig.build.json
+++ b/packages/wallet-sdk/tsconfig.build.json
@@ -1,12 +1,17 @@
 {
-  "extends": "./tsconfig",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "declaration": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
     "outDir": "./build/npm/dist",
     "target": "es2017"
   },
-  "include": ["src", "src/@types"],
-  "exclude": ["**/*.test.*", "__tests__", "examples"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "dist",
+    "build",
+    "**/*.test.*",
+    "__tests__"
+  ]
 }
