--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,17 +21,17 @@ jobs:
           cache-dependency-path: 'yarn.lock'
 
       - name: Install NPM dependencies
-        run: yarn install
+        run: yarn install --immutable
 
       - name: Check ESLint
-        run: yarn lint:eslint
+        run: yarn lint
 
-  lint-check:
+  typecheck:
     name: Type Check
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./packages/wallet-sdk
+        working-directory: ./
 
     steps:
       - name: Checkout
@@ -44,20 +44,21 @@ jobs:
           cache-dependency-path: '**/yarn.lock'
 
       - name: Install NPM dependencies
-        run: yarn install
+        run: yarn install --immutable
 
       - name: Runs compile asset script
+        working-directory: ./packages/wallet-sdk
         run: node ./compile-assets.js
 
       - name: Check Types
-        run: yarn lint:types
+        run: yarn typecheck
 
   tests:
     name: Tests
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./packages/wallet-sdk
+        working-directory: ./
 
     strategy:
       matrix:
@@ -74,7 +75,12 @@ jobs:
           cache-dependency-path: '**/yarn.lock'
 
       - name: Install NPM dependencies
-        run: yarn install
+        run: yarn install --immutable
+
+      - name: Runs compile asset script
+        working-directory: ./packages/wallet-sdk
+        run: node ./compile-assets.js
 
       - name: Run Unit Tests
+        working-directory: ./packages/wallet-sdk
         run: yarn test:unit
