--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "packages/*"
   ],
   "scripts": {
-    "lint": "yarn lint:eslint",
-    "lint:eslint": "eslint . --ext .ts,.tsx"
+    "lint": "yarn workspaces foreach -pt run lint",
+    "typecheck": "yarn workspaces foreach -pt run typecheck"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -22,5 +22,6 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.0"
-  }
+  },
+  "packageManager": "yarn@3.6.1"
 }
