--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ],
   "scripts": {
     "lint": "yarn workspaces foreach -pt run lint",
-    "typecheck": "yarn workspaces foreach -pt run typecheck"
+    "typecheck": "yarn workspaces foreach -pt run typecheck",
+    "dev": "yarn workspaces foreach run dev"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
