--- a/packages/wallet-sdk/tsconfig.build.json
+++ b/packages/wallet-sdk/tsconfig.build.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "declaration": true,
     "outDir": "./build/npm/dist",
-    "target": "es2017"
+    "target": "es2017",
+    // For Preact
+    "jsx": "react",
+    "jsxFactory": "h",
   },
   "include": [
     "src"
