--- a/packages/wallet-sdk/tsconfig.json
+++ b/packages/wallet-sdk/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    // For Preact
+    "jsx": "react",
+    "jsxFactory": "h",
+  },
   "include": [
     "**/*"
   ],
