Set build to generate dist dir at pkg root

--- a/packages/wallet-sdk/tsconfig.build.json
+++ b/packages/wallet-sdk/tsconfig.build.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "declaration": true,
-    "outDir": "./build/npm/dist",
+    "outDir": "./dist",
     "target": "es2017",
     // For Preact
     "jsx": "react",
