--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -30,8 +30,8 @@
     "prebuild": "rm -rf ./build && node -p \"'export const LIB_VERSION = \\'' + require('./package.json').version + '\\';'\" > src/version.ts",
     "build": "node compile-assets.js && webpack --config webpack.config.js",
     "build:npm": "tsc -p ./tsconfig.build.json",
-    "build:prod": "yarn build && yarn build:npm && cp ./package.json ../../README.md ./LICENSE build/npm && cp -a src/vendor-js build/npm/dist",
-    "postbuild:prod": "sed -i.bak 's|  \"private\": true,||g' build/npm/package.json && rm -f build/npm/package.json.bak",
+    "build:prod": "yarn build && yarn build:npm && cp ./package.json ../../README.md ./LICENSE dist && cp -a src/vendor-js dist",
+    "postbuild:prod": "sed -i.bak 's|  \"private\": true,||g' dist/package.json && rm -f dist/package.json.bak",
     "dev": "nodemon --config nodemon.json",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx --fix",
