--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -28,9 +28,10 @@
     "test:unit:coverage": "yarn test:unit && open coverage/lcov-report/index.html",
     "test:karma": "yarn build:npm && karma start",
     "prebuild": "rm -rf ./build && node -p \"'export const LIB_VERSION = \\'' + require('./package.json').version + '\\';'\" > src/version.ts",
-    "build": "node compile-assets.js && webpack --config webpack.config.js",
+    "build": "node compile-assets.js",
     "build:npm": "tsc -p ./tsconfig.build.json",
-    "build:prod": "yarn build && yarn build:npm && cp ./package.json ../../README.md ./LICENSE dist && cp -a src/vendor-js dist",
+    "build:prod:old": "yarn build && yarn build:npm && cp ./package.json ../../README.md ./LICENSE dist && cp -a src/vendor-js dist",
+    "build:prod": "yarn build && yarn build:npm && cp -a src/vendor-js dist",
     "postbuild:prod": "sed -i.bak 's|  \"private\": true,||g' dist/package.json && rm -f dist/package.json.bak",
     "dev": "nodemon --config nodemon.json",
     "typecheck": "tsc --noEmit",
