--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "lint": "yarn workspaces foreach -pt run lint",
     "typecheck": "yarn workspaces foreach -pt run typecheck",
-    "dev": "yarn workspaces foreach run dev"
+    "dev": "yarn workspaces foreach run dev",
+    "release": "./scripts/release.sh"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
