--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -35,8 +35,7 @@
     "postbuild:prod": "sed -i.bak 's|  \"private\": true,||g' dist/package.json && rm -f dist/package.json.bak",
     "dev": "nodemon --config nodemon.json",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint . --ext .ts,.tsx --fix",
-    "release": "./scripts/release.sh"
+    "lint": "eslint . --ext .ts,.tsx --fix"
   },
   "private": true,
   "dependencies": {
