dev script working

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "lint": "yarn workspaces foreach -pt run lint",
     "typecheck": "yarn workspaces foreach -pt run typecheck",
-    "dev": "yarn workspaces foreach run dev",
+    "dev": "yarn workspaces foreach -ipv run dev",
     "release": "./scripts/release.sh"
   },
   "devDependencies": {
