--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -33,7 +33,7 @@
     "build:prod:old": "yarn build && yarn build:npm && cp ./package.json ../../README.md ./LICENSE dist && cp -a src/vendor-js dist",
     "build:prod": "yarn build && yarn build:npm && cp -a src/vendor-js dist",
     "postbuild:prod": "sed -i.bak 's|  \"private\": true,||g' dist/package.json && rm -f dist/package.json.bak",
-    "dev": "nodemon --config nodemon.json",
+    "dev": "node compile-assets.js && tsc --watch",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx --fix"
   },
