clean up watch and npm scripts

--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -26,18 +26,13 @@
     "pretest:unit": "node compile-assets.js",
     "test:unit": "jest",
     "test:unit:coverage": "yarn test:unit && open coverage/lcov-report/index.html",
-    "test:karma": "yarn build:npm && karma start",
+    "test:karma": "yarn build && karma start",
     "prebuild": "rm -rf ./build && node -p \"'export const LIB_VERSION = \\'' + require('./package.json').version + '\\';'\" > src/version.ts",
-    "build": "node compile-assets.js",
-    "build:npm": "tsc -p ./tsconfig.build.json",
-    "build:prod:old": "yarn build && yarn build:npm && cp ./package.json ../../README.md ./LICENSE dist && cp -a src/vendor-js dist",
-    "build:prod": "yarn build && yarn build:npm && cp -a src/vendor-js dist",
-    "postbuild:prod": "sed -i.bak 's|  \"private\": true,||g' dist/package.json && rm -f dist/package.json.bak",
+    "build": "node compile-assets.js && tsc -p ./tsconfig.build.json && cp -a src/vendor-js dist",
     "dev": "node compile-assets.js && tsc --watch",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx --fix"
   },
-  "private": true,
   "dependencies": {
     "@metamask/safe-event-emitter": "2.0.0",
     "@solana/web3.js": "^1.70.1",
