--- a/packages/wallet-sdk/tsconfig.json
+++ b/packages/wallet-sdk/tsconfig.json
@@ -11,14 +11,15 @@
     // Use native file system events for files and directories
     "watchFile": "useFsEvents",
     "watchDirectory": "useFsEvents",
-    // Poll files for updates more frequently
-    // when they're updated a lot.
     "fallbackPolling": "dynamicPriority",
-    // Don't coalesce watch notification
     "synchronousWatchDirectory": true,
-    // Finally, two additional settings for reducing the amount of possible
-    // files to track  work from these directories
-    "excludeDirectories": ["**/node_modules", "_build"],
+    "excludeDirectories": [
+      "**/node_modules",
+      "__tests__",
+      "dist",
+      "build",
+      "**/*.test.*",
+    ],
     "excludeFiles": ["build/fileWhichChangesOften.ts"]
   },
   "include": [
