--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -29,7 +29,7 @@
     "test:karma": "yarn build && karma start",
     "prebuild": "rm -rf ./build && node -p \"'export const LIB_VERSION = \\'' + require('./package.json').version + '\\';'\" > src/version.ts",
     "build": "node compile-assets.js && tsc -p ./tsconfig.build.json && cp -a src/vendor-js dist",
-    "dev": "node compile-assets.js && tsc --watch",
+    "dev": "node compile-assets.js && cp -a src/vendor-js dist && tsc --watch",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx --fix"
   },
