Create Developer Env for SDK (#942)
* ignore nextjs output

* add basic nextjs app for dev purposes

* rename dev to testapp

* update tsconfig

* add sdk to testapp

* add nodemon config

* Set build to generate dist dir at pkg root

* use the SDK

* remove webpack from build

* move release script

* dev script working

* move assets to top level

* clean up watch and npm scripts

* fix dev script

* update release script

* remove unused deps

* update publish script

--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ],
   "scripts": {
     "lint": "yarn workspaces foreach -pt run lint",
-    "typecheck": "yarn workspaces foreach -pt run typecheck"
+    "typecheck": "yarn workspaces foreach -pt run typecheck",
+    "dev": "yarn workspaces foreach -ipv run dev",
+    "release": "./scripts/release.sh"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
