--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -26,17 +26,13 @@
     "pretest:unit": "node compile-assets.js",
     "test:unit": "jest",
     "test:unit:coverage": "yarn test:unit && open coverage/lcov-report/index.html",
-    "test:karma": "yarn build:npm && karma start",
+    "test:karma": "yarn build && karma start",
     "prebuild": "rm -rf ./build && node -p \"'export const LIB_VERSION = \\'' + require('./package.json').version + '\\';'\" > src/version.ts",
-    "build": "node compile-assets.js && webpack --config webpack.config.js",
-    "build:npm": "tsc -p ./tsconfig.build.json",
-    "build:prod": "yarn build && yarn build:npm && cp ./package.json ../../README.md ./LICENSE build/npm && cp -a src/vendor-js build/npm/dist",
-    "postbuild:prod": "sed -i.bak 's|  \"private\": true,||g' build/npm/package.json && rm -f build/npm/package.json.bak",
+    "build": "node compile-assets.js && tsc -p ./tsconfig.build.json && cp -a src/vendor-js dist",
+    "dev": "node compile-assets.js && cp -a src/vendor-js dist && tsc --watch",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint . --ext .ts,.tsx --fix",
-    "release": "./scripts/release.sh"
+    "lint": "eslint . --ext .ts,.tsx --fix"
   },
-  "private": true,
   "dependencies": {
     "@metamask/safe-event-emitter": "2.0.0",
     "@solana/web3.js": "^1.70.1",
@@ -70,7 +66,6 @@
     "@types/sha.js": "^2.4.0",
     "babel-jest": "^27.5.1",
     "browserify": "17.0.0",
-    "copy-webpack-plugin": "^6.4.1",
     "core-js": "^3.8.2",
     "jasmine": "3.8.0",
     "jest": "^27.5.1",
@@ -82,18 +77,13 @@
     "karma-jasmine": "^4.0.1",
     "nodemon": "^2.0.6",
     "prettier": "^2.5.1",
-    "raw-loader": "^4.0.2",
     "regenerator-runtime": "^0.13.7",
     "sass": "^1.50.0",
     "svgo": "^2.8.0",
     "ts-jest": "^27.1.4",
-    "ts-loader": "^8.0.13",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6",
-    "watchify": "4.0.0",
-    "webpack": "^5.76.0",
-    "webpack-cli": "^4.9.2",
     "whatwg-fetch": "^3.5.0"
   },
   "engines": {
