--- a/apps/testapp/package.json
+++ b/apps/testapp/package.json
@@ -7,7 +7,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.7.1",
     "@coinbase/wallet-sdk": "workspace:^",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.12.22",
     "next": "^13.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
