--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -43,6 +43,7 @@
     "eth-block-tracker": "6.1.0",
     "eth-json-rpc-filters": "5.1.0",
     "eth-rpc-errors": "4.0.3",
+    "eventemitter3": "^5.0.1",
     "json-rpc-engine": "6.1.0",
     "keccak": "^3.0.3",
     "preact": "^10.16.0",
@@ -61,6 +62,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/preact": "^2.0.1",
     "@types/bn.js": "^4.11.6",
+    "@types/eventemitter3": "^2.0.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^14.18.54",
     "@types/sha.js": "^2.4.1",
