Remove safe-event-emitter in favor of eventemitter3 (#951)
* fork mm safe event emitter

* remove lib in favor of eventemitter3

* update readme

* replace metamask/safe-event-emitter with eventemitter3

* remove safe-event-emitter

* clean up listeners

--- a/packages/wallet-sdk/tsconfig.build.json
+++ b/packages/wallet-sdk/tsconfig.build.json
@@ -6,15 +6,8 @@
     "target": "es2017",
     // For Preact
     "jsx": "react",
-    "jsxFactory": "h",
+    "jsxFactory": "h"
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "dist",
-    "build",
-    "**/*.test.*",
-    "__tests__"
-  ]
+  "include": ["src"],
+  "exclude": ["dist", "build", "**/*.test.*"]
 }
