--- a/packages/wallet-sdk/tsconfig.build.json
+++ b/packages/wallet-sdk/tsconfig.build.json
@@ -4,9 +4,8 @@
     "declaration": true,
     "outDir": "./dist",
     "target": "es2017",
-    // For Preact
     "jsx": "react",
-    "jsxFactory": "h"
+    "jsxFactory": "h",
   },
   "include": ["src"],
   "exclude": ["dist", "build", "**/*.test.*"]
