--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -23,10 +23,9 @@
   "author": "Coinbase, Inc.",
   "license": "Apache-2.0",
   "scripts": {
-    "pretest:unit": "node compile-assets.js",
-    "test:unit": "jest",
-    "test:unit:coverage": "yarn test:unit && open coverage/lcov-report/index.html",
-    "test:karma": "yarn build && karma start",
+    "pretest": "node compile-assets.js",
+    "test": "jest",
+    "test:coverage": "yarn test:unit && open coverage/lcov-report/index.html",
     "prebuild": "rm -rf ./build && node -p \"'export const LIB_VERSION = \\'' + require('./package.json').version + '\\';'\" > src/version.ts",
     "build": "node compile-assets.js && tsc -p ./tsconfig.build.json && cp -a src/vendor-js dist",
     "dev": "node compile-assets.js && cp -a src/vendor-js dist && tsc --watch",
@@ -61,24 +60,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/preact": "^2.0.1",
     "@types/bn.js": "^4.11.6",
-    "@types/eventemitter3": "^2.0.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^14.18.54",
     "@types/sha.js": "^2.4.1",
     "babel-jest": "^27.5.1",
-    "core-js": "^3.31.1",
     "jest": "^27.5.1",
     "jest-chrome": "^0.7.2",
     "jest-websocket-mock": "^2.4.0",
     "prettier": "^2.8.8",
-    "regenerator-runtime": "^0.13.11",
     "sass": "^1.64.1",
     "svgo": "^2.8.0",
     "ts-jest": "^27.1.5",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.0",
-    "typescript": "^5.1.6",
-    "whatwg-fetch": "^3.5.0"
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">= 10.0.0"
