--- a/packages/wallet-sdk/tsconfig.json
+++ b/packages/wallet-sdk/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "target": "es2017",
     "jsx": "react",
     "jsxFactory": "h",
@@ -24,10 +24,11 @@
   "include": [
     "./src",
     "**/*.test.*",
-    "global.d.ts"
+    "./jest.setup.ts"
   ],
   "exclude": [
     "dist",
     "build",
   ]
 }
+ 
