--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,7 +26,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "target": "es2016",
-    "types": ["node", "jest", "@testing-library/jest-dom"],
+    "types": ["node", "jest"],
     // Paths
     "paths": {
       ":wallet-sdk/*": [
