--- a/packages/wallet-sdk/tsconfig.json
+++ b/packages/wallet-sdk/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "target": "es2017",
     "jsx": "react",
     "jsxFactory": "h",
@@ -22,12 +22,13 @@
     ],
   },
   "include": [
-    "./src"
+    "./src",
+    "**/*.test.*",
+    "./jest.setup.ts"
   ],
   "exclude": [
     "dist",
     "build",
-    "**/*.test.*",
-    "__tests__"
   ]
 }
+ 
