remove: 2 unused dependencies
These dependencies were previously used as polyfills in webpack bundle
process but now that webpack is gone, they can be removed too.

--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -46,9 +46,7 @@
     "keccak": "^3.0.3",
     "preact": "^10.16.0",
     "rxjs": "^6.6.3",
-    "sha.js": "^2.4.11",
-    "stream-browserify": "^3.0.0",
-    "util": "^0.12.5"
+    "sha.js": "^2.4.11"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
