--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -38,10 +38,9 @@
     "bn.js": "^5.2.1",
     "buffer": "^6.0.3",
     "clsx": "^1.2.1",
-    "eth-block-tracker": "6.1.0",
-    "eth-json-rpc-filters": "5.1.0",
+    "eth-block-tracker": "^7.1.0",
+    "eth-json-rpc-filters": "^6.0.0",
     "eventemitter3": "^5.0.1",
-    "json-rpc-engine": "6.1.0",
     "keccak": "^3.0.3",
     "preact": "^10.16.0",
     "rxjs": "^6.6.3",
@@ -53,6 +52,7 @@
     "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-typescript": "^7.22.5",
+    "@metamask/json-rpc-engine": "^7.0.0",
     "@peculiar/webcrypto": "^1.4.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/preact": "^2.0.1",
