--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -19,6 +19,7 @@
   ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "sideEffects": false,
   "repository": "https://github.com/coinbase/coinbase-wallet-sdk.git",
   "author": "Coinbase, Inc.",
   "license": "Apache-2.0",
