--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run e2e tests
         env:
           GITHUB_TOKEN: ${{ github.token }}
-        run: yarn test
+        run: yarn test:ci
       - uses: actions/upload-artifact@v3
         if: always()
         with:
