update: CJS require imports

--- a/packages/wallet-sdk/tsconfig.build.json
+++ b/packages/wallet-sdk/tsconfig.build.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "allowJs": true,
     "declaration": true,
     "outDir": "./dist",
     "target": "es2017",
