--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -17,19 +17,23 @@
     "walletlink",
     "web3"
   ],
-  "main": "dist/index.js",
+  "type": "module",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
   "repository": "https://github.com/coinbase/coinbase-wallet-sdk.git",
   "author": "Coinbase, Inc.",
   "license": "Apache-2.0",
   "scripts": {
-    "pretest": "node compile-assets.js",
+    "pretest": "node compile-assets.cjs",
     "test": "jest",
     "test:coverage": "yarn test:unit && open coverage/lcov-report/index.html",
     "prebuild": "rm -rf ./build && node -p \"'export const LIB_VERSION = \\'' + require('./package.json').version + '\\';'\" > src/version.ts",
-    "build": "node compile-assets.js && tsc -p ./tsconfig.build.json && cp -a src/vendor-js dist",
-    "dev": "node compile-assets.js && tsc --watch",
+    "build": "node compile-assets.cjs && yarn build:cjs && yarn build:esm",
+    "build:cjs": "tsc --project ./tsconfig.build.json --module commonjs --outDir ./dist/cjs && echo '{\"type\": \"commonjs\"}' > ./dist/cjs/package.json",
+    "build:esm": "tsc --project ./tsconfig.build.json --module es2015 --outDir ./dist/esm && echo '{\"type\": \"module\",\"sideEffects\": false}' > ./dist/esm/package.json",
+    "dev": "node compile-assets.cjs && tsc --watch",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx --fix"
   },
