--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -73,8 +73,9 @@
     "@types/node": "^14.18.54",
     "@types/sha.js": "^2.4.1",
     "babel-jest": "^27.5.1",
-    "jest": "^27.5.1",
+    "jest": "^29.6.2",
     "jest-chrome": "^0.7.2",
+    "jest-environment-jsdom": "^29.6.2",
     "jest-websocket-mock": "^2.4.0",
     "prettier": "^2.8.8",
     "sass": "^1.64.1",
