--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
-          cache-dependency-path: '**/yarn.lock'
+          cache-dependency-path: 'yarn.lock'
 
       - name: Update version
         run: npm version ${{ env.PACKAGE_VERSION }}
