--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.0"
   },
-  "packageManager": "yarn@3.6.1"
+  "packageManager": "yarn@3.6.1",
+  "dependencies": {
+    "@metamask/eth-sig-util": "^7.0.0"
+  }
 }
