--- a/packages/wallet-sdk/tsconfig.json
+++ b/packages/wallet-sdk/tsconfig.json
@@ -4,6 +4,11 @@
     "allowJs": true,
     "outDir": "./dist",
     "rootDir": "./src",
+    "baseUrl": "./src",
+    "paths": {
+      ":lib/*": ["lib/*"],
+      ":core/*": ["core/*"],
+    },
     "target": "es2017",
     "jsx": "react",
     "jsxFactory": "h",
