define codeflow job
commit 74d75fdcf3f891cbe55403efb1136fed5c89947f
Merge: 53cedd28 e5b80fb3
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Mon Nov 20 14:18:56 2023 -0800

    Merge pull request #4 from wallet/jungho/asdfasdfasdf

    shared

commit e5b80fb308e7176fcf8cc4a297e477cb5521184a
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Mon Nov 20 14:15:45 2023 -0800

    shared

commit 53cedd285560a2ed2e74ed173aaa9b1b3301e0ae
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Mon Nov 20 14:05:36 2023 -0800

    fix (#3)

    * no slack error

    * config file

    * ugh

commit 864ddc9d3b23f2ae3435226c6357c459e9331e42
Merge: a9f34b3d 85813135
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Mon Nov 20 13:18:44 2023 -0800

    Merge pull request #2 from wallet/jungho/codeflow-build

    ls

commit 85813135cdba5d477f03fac3acc7cf521dcf2b06
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Mon Nov 20 13:17:39 2023 -0800

    sadfasdfadf

commit dbaea5013c4e1d8a1f0b3ec29c97e32ff21b8b1a
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Mon Nov 20 13:17:20 2023 -0800

    asdfasdf

commit 384ab2e54a04d2b33c94aea3558342b8e59f18af
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Mon Nov 20 13:02:45 2023 -0800

    WORKDIR /sdk

commit 64dc76525124ddba8ad714965861b54ffc990996
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Mon Nov 20 12:58:12 2023 -0800

    workdir /sdk

commit 70dd5982f4f7fc4a7dc813355c2d4eb61b57b8a7
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Mon Nov 20 12:57:46 2023 -0800

    udpate copy path

commit 3d686cf8335f40e200b138fc0666f2d7bbc689ad
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Mon Nov 20 12:48:38 2023 -0800

    ls

commit a9f34b3d833e7236697ff40229d32590c041a506
Merge: 40d91973 f2e819b7
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Mon Nov 20 12:40:59 2023 -0800

    Merge pull request #1 from wallet/jungho/codeflow

    codeflow

commit f2e819b73cb68b9ef9909dd583584

--- a/.codeflow.yml
+++ b/.codeflow.yml
@@ -3,5 +3,12 @@ secure:
   upstream_repository: coinbase/coinbase-wallet-sdk
 operate:
   slack_channels:
-    - "#wallet-squad-build"
-    - "#wallet-feedback"
+    - "#wallet-squad-w3i"
+build:
+  engines:
+  - BaldurNode:
+      name: package-wallet-sdk
+      path: "./scripts/publish-canary.Dockerfile"
+      compute_type: BUILD_GENERAL1_SMALL
+      context: "./"
+      autobuild: true
