--- a/.codeflow.yml
+++ b/.codeflow.yml
@@ -3,7 +3,7 @@ secure:
   upstream_repository: coinbase/coinbase-wallet-sdk
 operate:
   slack_channels:
-    - "#wallet-squad-w3i"
+  - "#wallet-squad-w3i"
 build:
   engines:
   - BaldurNode:
@@ -11,4 +11,4 @@ build:
       path: "./scripts/publish-canary.Dockerfile"
       compute_type: BUILD_GENERAL1_SMALL
       context: "./"
-      autobuild: true
+      autobuild: false
