--- a/.codeflow.yml
+++ b/.codeflow.yml
@@ -1,7 +1,11 @@
 secure:
   required_reviews: 1
   upstream_repository: coinbase/coinbase-wallet-sdk
-operate:
-  slack_channels:
-    - "#wallet-squad-build"
-    - "#wallet-feedback"
+build:
+  engines:
+  - BaldurNode:
+      name: package-wallet-sdk
+      path: "./scripts/publish-canary.Dockerfile"
+      compute_type: BUILD_GENERAL1_SMALL
+      context: "./"
+      autobuild: false
