--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coinbase/wallet-sdk",
-  "version": "3.9.0",
+  "version": "3.9.0-canary.6",
   "description": "Coinbase Wallet JavaScript SDK",
   "keywords": [
     "cipher",
