Enable codeflow autobuild job to publish internal npm (#1)
commit b57482fc651d8441ee942192d0238d34637823cb
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Fri Dec 8 15:18:29 2023 -0500

    use 3.9.1 on the test app (#1097)

commit c7cd33e0c1a0a98f6b81119f29af6d7fce43d445
Author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Date:   Fri Dec 8 11:54:28 2023 -0800

    v3.9.1 (#1095)

    Co-authored-by: bangtoven <bangtoven@users.noreply.github.com>

commit d898a4d5da19a1c9f21e66b9eeb0caa088ebf9b6
Author: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Date:   Fri Dec 8 11:53:25 2023 -0800

    Bump @adobe/css-tools from 4.3.1 to 4.3.2 (#1088)

    Bumps [@adobe/css-tools](https://github.com/adobe/css-tools) from 4.3.1 to 4.3.2.
    - [Changelog](https://github.com/adobe/css-tools/blob/main/History.md)
    - [Commits](https://github.com/adobe/css-tools/commits)

    ---
    updated-dependencies:
    - dependency-name: "@adobe/css-tools"
      dependency-type: indirect
    ...

    Signed-off-by: dependabot[bot] <support@github.com>
    Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

commit e33a7414ec2b759ead01cb1432cf351640c642e1
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Fri Dec 8 14:52:47 2023 -0500

    Clean up SVG files (#1096)

    * remove copyright

    * optimize icon importing

    * no svg -> ts conversion

    * remove unnecessary logo file

commit 92eba409d1ecc4a6150f8ca93d541ee44218d86c
Author: Jungho Bang <jungho.bang@coinbase.com>
Date:   Fri Dec 8 12:31:18 2023 -0500

    Optimize compile-assets.js (#1094)

    * remove copyright

    * optimize compile asset

commit 11a44ba2f7e85be8299f202f6189d4965599683e
Author: Felix Zhang <22125939+fan-zhang-sv@users.noreply.github.com>
Date:   Fri Dec 1 21:52:40 2023 -0800

    use 3.9.0 (#1089)

commit f5f1151e06904d436345554685bd634524089bae
Author: github-actions[bot] <41898282+github-actions[bot]@users.

--- a/.codeflow.yml
+++ b/.codeflow.yml
@@ -8,4 +8,4 @@ build:
       path: "./scripts/publish-canary.Dockerfile"
       compute_type: BUILD_GENERAL1_SMALL
       context: "./"
-      autobuild: false
+      autobuild: true
