--- a/apps/testapp/package.json
+++ b/apps/testapp/package.json
@@ -8,9 +8,9 @@
     "export": "yarn workspace @coinbase/wallet-sdk run build && next build && next export"
   },
   "dependencies": {
+    "@cbhq/wallet-sdk": "workspace:^",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.0",
-    "@coinbase/wallet-sdk": "workspace:^",
     "@coinbase/wallet-sdk-3.7": "npm:@coinbase/wallet-sdk@~3.7.2",
     "@coinbase/wallet-sdk-3.9": "npm:@coinbase/wallet-sdk@~3.9.1",
     "@emotion/react": "^11.11.1",
