--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -17,25 +17,30 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on:
+      - default-config
+      - xsmall
+      - wallet-org-runner
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: "18"
-          cache: yarn
+          node-version-file: ".nvmrc"
+          cache-dependency-path: "yarn.lock"
       - name: Setup Pages
         uses: actions/configure-pages@v3
         with:
           static_site_generator: next
+      - name: Install yarn
+        run: corepack enable
       - name: Install dependencies
         run: yarn install
       - name: Build and export with Next.js
         run: yarn workspace @coinbase/wallet-sdk-testapp run export
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v1
         with:
           path: ./apps/testapp/out
 
@@ -43,7 +48,10 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
+    runs-on:
+      - default-config
+      - xsmall
+      - wallet-org-runner
     needs: build
     steps:
       - name: Deploy to GitHub Pages
