--- a/apps/testapp/package.json
+++ b/apps/testapp/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
-    "export": "yarn workspace @coinbase/wallet-sdk run build && next build && next export"
+    "export": "yarn workspace @cbhq/wallet-sdk run build && next build && next export"
   },
   "dependencies": {
     "@cbhq/wallet-sdk": "workspace:^",
