--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,3 +105,7 @@ jobs:
       - name: Run Unit Tests
         working-directory: ./packages/wallet-sdk
         run: yarn test
+      
+      - name: Run Unit Tests - Host library
+        working-directory: ./packages/scw-sdk-host
+        run: yarn test
