Show SDK version on the test dapp & temporarily point to canary.677 (#42)
* sdk version

* scripts

* test app to use working version of sdk

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,6 +2,10 @@ checksumBehavior: update
 
 nodeLinker: node-modules
 
+npmScopes:
+  cbhq:
+    npmRegistryServer: 'https://registry-npm.cbhq.net'
+  
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
