--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: CI
 
-on: 
+on:
   pull_request:
   push:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   lint:
@@ -23,8 +23,8 @@ jobs:
       - name: Checkout node action
         uses: actions/setup-node@v3
         with:
-          node-version-file: '.nvmrc'
-          cache-dependency-path: 'yarn.lock'
+          node-version-file: ".nvmrc"
+          cache-dependency-path: "yarn.lock"
 
       - name: Install yarn
         run: corepack enable
@@ -52,12 +52,12 @@ jobs:
       - name: Checkout node action
         uses: actions/setup-node@v3
         with:
-          node-version-file: '.nvmrc'
-          cache-dependency-path: '**/yarn.lock'
+          node-version-file: ".nvmrc"
+          cache-dependency-path: "**/yarn.lock"
 
       - name: Install yarn
         run: corepack enable
-  
+
       - name: Install NPM dependencies
         run: sh scripts/ci-yarn-install.sh
 
@@ -90,11 +90,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache-dependency-path: '**/yarn.lock'
+          cache-dependency-path: "**/yarn.lock"
 
       - name: Install yarn
         run: corepack enable
-            
+
       - name: Install NPM dependencies
         run: sh scripts/ci-yarn-install.sh
 
@@ -104,8 +104,4 @@ jobs:
 
       - name: Run Unit Tests
         working-directory: ./packages/wallet-sdk
-        run: yarn test
-      
-      - name: Run Unit Tests - Host library
-        working-directory: ./packages/scw-sdk-host
         run: yarn test
