--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@cbhq/wallet-sdk",
-  "version": "4.0.0",
+  "name": "@coinbase/wallet-sdk",
+  "version": "4.0.0-beta.0",
   "description": "Coinbase Wallet JavaScript SDK",
   "keywords": [
     "cipher",
