--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -14,30 +14,25 @@ concurrency:
 
 jobs:
   build:
-    runs-on:
-      - default-config
-      - xsmall
-      - wallet-org-runner
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version-file: ".nvmrc"
-          cache-dependency-path: "yarn.lock"
+          node-version: "18"
+          cache: yarn
       - name: Setup Pages
         uses: actions/configure-pages@v3
         with:
           static_site_generator: next
-      - name: Install yarn
-        run: corepack enable
       - name: Install dependencies
         run: yarn install
       - name: Build and export with Next.js
         run: yarn workspace @coinbase/wallet-sdk-testapp run export
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./apps/testapp/out
 
@@ -45,10 +40,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on:
-      - default-config
-      - xsmall
-      - wallet-org-runner
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Deploy to GitHub Pages
