--- a/apps/testapp/package.json
+++ b/apps/testapp/package.json
@@ -13,12 +13,12 @@
     "@coinbase/wallet-sdk": "workspace:^",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@metamask/eth-sig-util": "^7.0.0",
     "framer-motion": "^10.13.1",
     "next": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.2",
-    "viem": "^2.7.15"
+    "react-hook-form": "^7.45.2"
   },
   "devDependencies": {
     "@types/react": "18.2.15"
