--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coinbase/wallet-sdk",
-  "version": "4.0.0-beta.12",
+  "version": "4.0.0-rc.1",
   "description": "Coinbase Wallet JavaScript SDK",
   "keywords": [
     "cipher",
