--- a/packages/wallet-sdk/tsconfig.build.json
+++ b/packages/wallet-sdk/tsconfig.build.json
@@ -6,7 +6,7 @@
     "baseUrl": ".",
     "paths": {
       ":core/*": ["src/core/*"],
-      ":util/*": ["src/util/*"],
+      ":util/*": ["src/util/*"]
     },
     "target": "es2017",
     "jsx": "react",
