#trivial reorg files to ensure webpack compatibility (#1247)
* filter

* util alias

* move scope storage to util

* util

* provider utils

* type/utils

* cleanup

* missing

--- a/packages/wallet-sdk/tsconfig.build.json
+++ b/packages/wallet-sdk/tsconfig.build.json
@@ -5,6 +5,7 @@
     "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
+      ":util/*": ["src/util/*"],
       ":core/*": ["src/core/*"]
     },
     "target": "es2017",
